--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,4 +1,4 @@
-.Proyects-container {
+.proyects-container {
     background-color: rgb(247, 247, 247);
     display: flex;
     flex-direction: column;
@@ -8,11 +8,11 @@
     font-family: "Poppins", sans-serif;
 }
 
-.Proyects-title {
+.proyects-title {
     margin: 0 0 3rem 0;
 }
 
-.Proyects-title h2 {
+.proyects-title h2 {
     font-size: 1.7rem;
     padding: 0 0 0.3rem 0;
     margin: 0;
@@ -20,7 +20,7 @@
     color: var(--purple);
 }
 
-.Proyects-card-container {
+.proyects-card-container {
     display: flex;
     justify-content: center;
     gap: 3rem;
@@ -145,13 +145,13 @@
 }
 
 @media only screen and (max-width: 1453px) {
-    .Proyects-container {
+    .proyects-container {
         padding: 6.5rem 11rem;
     }
 }
 
 @media only screen and (max-width: 1139px) {
-    .Proyects-container {
+    .proyects-container {
         padding: 6.5rem 4.5rem;
     }
 
@@ -190,7 +190,7 @@
 }
 
 @media only screen and (max-width: 710px) {
-    .Proyects-container {
+    .proyects-container {
         padding: 6.5rem 1.5rem;
     }
 
@@ -244,7 +244,7 @@
 }
 
 @media only screen and (max-width: 523px) {
-    .Proyects-title h2 {
+    .proyects-title h2 {
         font-size: 1.3rem;
     }
 
