--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -108,6 +108,21 @@
   width: 3rem;
 }
 
+.skill-c img {
+  height:2.5rem;
+  width: 2.5rem;
+}
+
+.skill-d img {
+  height: 2.5rem;
+  width: 3rem;
+}
+
+.skill-e img {
+  height: 2.5rem;
+  width: 3rem;
+}
+
 .home-ul {
   display: flex;
   list-style: none;
@@ -116,7 +131,8 @@
 }
 
 .home-link-img a{
-  margin-right: 1rem;
+  margin-right: 0.55rem;
+  margin-left: 0.5rem;
 }
 
 .home-link-img i{
@@ -130,34 +146,6 @@
   }
 }
 
-@media only screen and (max-width: 1070px) {
-  .home-container {
-    padding: 6rem 1.5rem 1.5rem 1.5rem;
-    height: 100%;
-  }
-
-  .home-title {
-    text-align: center;
-
-  }
-
-  .home-container-2 {
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .home-p {
-    margin: 1.5rem 0;
-    width: 100%;
-  }
-
-  .home-ul {
-    justify-content: center;
-  }
-
-
-}
 
 @media only screen and (max-width: 1300px) {
   .home-title {
@@ -218,6 +206,36 @@
     margin-bottom: 1.5rem;
   }
 }
+
+@media only screen and (max-width: 1070px) {
+  .home-container {
+    padding: 6rem 1.5rem 1.5rem 1.5rem;
+    height: 100%;
+  }
+
+  .home-title {
+    text-align: center;
+
+  }
+
+  .home-container-2 {
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .home-p {
+    margin: 1.5rem 0;
+    width: 100%;
+  }
+
+  .home-ul {
+    justify-content: center;
+  }
+
+
+}
+
 
 @media only screen and (max-width: 670px) {
   .homeImg {
