--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,8 @@
     justify-content: center;
     display: flex;
     font-family: "Poppins", sans-serif;
-
+    background-color: rgb(247, 247, 247);
+    padding-top: 3rem;
 }
 
 .footer-container footer{
