--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -46,9 +46,11 @@
 
 .proyect-skills {
     display: flex;
-    width:100%;
+    width: 60%;
     justify-content: space-around;
+    margin: auto;
     margin-bottom: 1rem;
+
 }
 
 
