--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -8,7 +8,6 @@
     background-color: white;
     z-index: 100;
     font-family: "Poppins", sans-serif;
-
 }
 
 .nav {
@@ -85,6 +84,7 @@
     top: 0;
     right: -100vw;
     transition: transform 0.5s;
+    font-family: "Poppins", sans-serif;
 }
 
 .mobile-nav a {
